# founder-os

./: .gitignore  CLAUDE.md
.claude/skills/backend-testing/: SKILL.md
app/: package-lock.json
app/app/: assistant.tsx  layout.tsx
app/lib/: runtime-provider.tsx
server/: .env.example  .gitignore  alembic.ini  pyproject.toml
server/src/founder_os/: __init__.py  main.py
server/src/founder_os/agent/: __init__.py  manager.py
server/src/founder_os/api/: __init__.py  files.py  sessions.py
server/src/founder_os/db/: __init__.py  models.py  session.py
server/src/founder_os/db/alembic/: env.py
server/src/founder_os/db/alembic/versions/: 1ac66a7218ca_initial_schema_with_sessions_and_turns.py  7647fa871d0d_add_claude_session_id_to_sessions.py
server/src/founder_os/stream/: __init__.py  redis.py
server/test-reports/: .gitignore
server/tests/: __init__.py  conftest.py  test_files.py  test_health.py  test_sessions.py
