[project]
name = "founder-os-server"
version = "0.1.0"
description = "Founder OS Agent Server"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.128.0",
    "uvicorn[standard]>=0.40.0",
    "aiosqlite>=0.22.1",
    "sqlalchemy[asyncio]>=2.0.45",
    "alembic>=1.17.2",
    "redis>=7.1.0",
    "claude-agent-sdk>=0.1.19",
    "anthropic>=0.40.0",
    "sse-starlette>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/founder_os"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
